<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="6dp"
        android:id="@+id/title_rl"
        >
        <ImageButton
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:id="@+id/goback_iv"
            android:background="@mipmap/left_arrow"
            android:layout_marginLeft="17dp"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_tv"
            android:text="@string/today_feedback_txt"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_rl"
        android:layout_centerHorizontal="true"
        android:paddingLeft="15dp"
        android:paddingRight="21dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_rec_black"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_txt_1"
            android:textSize="10sp"
            android:lines="1"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:id="@+id/feedback_single_tv"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/content_tv"
            android:text="@string/text_txt_2"
            android:layout_below="@+id/feedback_single_tv"
            android:layout_marginTop="4dp"
            android:lines="20"
            android:textSize="8dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/content_tv"
            android:layout_marginTop="58dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notice_person_tv"
                android:text="@string/notice_person_txt"
                android:textSize="8dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pub_person_tv"
                android:text="@string/notice_person_1"
                android:textSize="8dp"
                android:textColor="@color/gray_back"
                android:layout_toRightOf="@id/notice_person_tv"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notice_date_time_tv"
                android:text="@string/date_time_1"
                android:textSize="8dp"
                android:textColor="@color/gray_back"
                android:layout_alignParentRight="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notice_date_tv"
                android:text="@string/notice_time_txt"
                android:textSize="8dp"
                android:textColor="@color/gray_back"

                android:layout_toLeftOf="@id/notice_date_time_tv"
                android:layout_marginRight="4dp"
                android:layout_alignBottom="@id/notice_date_time_tv"

                />

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>