<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:paddingLeft="19dp"
                android:paddingRight="19dp"
>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/op_rl"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6sp"
            android:text="@string/txt_reset"
            android:id="@+id/goback_tv"
            style="@style/title_size_style"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_txt"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            style="@style/title_size_style"
            android:id="@+id/submit_tv"
            />
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="请为你的问题输入一个标题"
        android:layout_below="@+id/op_rl"
        android:background="@drawable/shape_rec_black"
        android:layout_marginTop="16dp"
        android:id="@+id/title_et"
        style="@style/title_size_style"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address_date_ll"
        android:orientation="horizontal"
        android:layout_below="@id/title_et"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:hint="请输入反馈地点"
            android:background="@drawable/shape_rec_black"
            android:id="@+id/address_et"
            style="@style/content_style"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="15"
        android:layout_below="@id/address_date_ll"
        android:layout_marginTop="10dp"
        style="@style/content_style"
        android:background="@drawable/shape_rec_black"
        android:id="@+id/feedback_detail_et"
        android:hint="@string/please_input_content"
        android:gravity="top|left"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pl_fl_ll"
        android:orientation="horizontal"
        android:layout_below="@id/feedback_detail_et"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        >

        <Spinner
            android:layout_width="122dp"
            android:layout_height="25dp"
            android:background="@drawable/shape_ring_depart"
            android:id="@+id/policy_department_et"
            android:paddingLeft="10dp"
            android:prompt="@string/please_choose_depart"
            android:spinnerMode="dialog"
            android:drawSelectorOnTop="true"
            />

        <Spinner
            android:layout_width="122dp"
            android:layout_height="25dp"
            android:prompt="@string/please_choose_person"
            android:background="@drawable/shape_ring_depart"
            android:id="@+id/policy_person_et"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:spinnerMode="dialog"
            />
    </LinearLayout>

  <!--  <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/pl_fl_ll"
        android:layout_marginTop="44dp"
        android:id="@+id/recycler"
        >
    </android.support.v7.widget.RecyclerView>-->

    <android.support.v7.widget.RecyclerView

            android:id="@+id/recyclerView"
            android:layout_marginTop="33dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:divider="@null"
            android:fadingEdge="none"
            android:listSelector="@android:color/transparent"
            android:scrollbarStyle="outsideOverlay"
            app:layoutManager="android.support.v7.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/item_upload_image"
            android:layout_below="@id/pl_fl_ll"
            >
    </android.support.v7.widget.RecyclerView>

</RelativeLayout>