<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
>


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="263dp"
            android:background="@mipmap/main_head_bg"
            android:id="@+id/head_rl"
    >

        <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"

                android:layout_marginTop="71dp"
                android:layout_centerInParent="true"
                android:id="@+id/head_iv"
                android:src="@mipmap/icon_head"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="兰世儒"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_below="@id/head_iv"
                android:layout_centerInParent="true"
                android:layout_marginTop="12dp"
                android:id="@+id/name_tv"

        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="信息中心|产品经理"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:layout_below="@id/name_tv"
                android:layout_centerInParent="true"
                android:layout_marginTop="2dp"
                android:id="@id/depart_tv"
        />
        />
    </RelativeLayout>

    <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="17dp"
            android:layout_marginTop="37dp"
            android:background="@mipmap/icon_settings"
            android:id="@+id/settings_iv"
    />

    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/settings_iv"
                    android:id="@+id/setting_rl"
                    android:visibility="gone"
                    android:layout_below="@+id/settings_iv"
                    >
                    <ImageButton android:layout_width="50dp" android:layout_height="50dp"
                        android:id="@+id/modify_pwd_ib"
                                 android:background="@color/red"
                    />

                    <ImageButton android:layout_width="50dp" android:layout_height="50dp"
                                 android:id="@+id/logout_ib"
                                 android:layout_below="@+id/modify_pwd_ib"
                                 android:background="@color/blue"
                    />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/head_rl"
            android:layout_centerHorizontal="true"
            android:id="@+id/all_fk_rl"
    >

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fk_main_ll"
                android:orientation="vertical"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textSize="15sp"
                    android:textColor="@color/red"
                    android:id="@+id/feedback_main_number_tv"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="反馈我的"
                    android:textSize="10sp"
                    android:textColor="@color/black"
                    android:layout_below="@id/feedback_main_number_tv"
            />
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_fk_ll"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/fk_main_ll"
                android:layout_marginLeft="95dp"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="120"
                    android:textSize="15sp"
                    android:textColor="@color/red"
                    android:id="@+id/main_fk_number_tv"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="我的反馈"
                    android:textSize="10sp"
                    android:textColor="@color/black"
                    android:layout_below="@id/main_fk_number_tv"
            />
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:layout_below="@+id/all_fk_rl"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="29dp"
    >
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/tel_rl"
        >
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@mipmap/tel_bg"
                    android:id="@+id/tel_iv"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tel_txt_tv"
                    android:text="@string/tel"
                    android:textColor="@color/black"
                    android:layout_toRightOf="@id/tel_iv"
                    android:layout_marginLeft="12dp"
                    android:layout_centerVertical="true"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tel_tv"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="13800000000"
                    android:layout_centerVertical="true"
                    android:textSize="10sp"
                    android:textStyle="bold"

            />

            <ImageView
                    android:layout_width="6dp"
                    android:layout_height="11dp"
                    android:id="@+id/tel_right_arrow"
                    android:layout_alignParentRight="true"
                    android:background="@mipmap/right_arrow"
                    android:layout_marginLeft="4dp"
                    android:layout_centerVertical="true"
            />
        </RelativeLayout>

        <ImageView
                android:layout_width="321dp"
                android:layout_height="1dp"
                android:layout_below="@id/tel_rl"
                android:layout_marginTop="8dp"
                android:background="@color/line_bg"
                android:id="@+id/tel_line"
        />
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/email_rl"
                android:layout_below="@id/tel_line"
                android:layout_marginTop="9dp"
        >
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@mipmap/email_bg"
                    android:id="@+id/email_iv"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_txt_tv"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:layout_toRightOf="@id/email_iv"
                    android:layout_marginLeft="12dp"
                    android:layout_centerVertical="true"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/email_tv"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:textSize="10sp"
                    android:textStyle="bold"

            />

            <ImageView
                    android:layout_width="6dp"
                    android:layout_height="11dp"
                    android:id="@+id/email_right_arrow"
                    android:layout_alignParentRight="true"
                    android:background="@mipmap/right_arrow"
                    android:layout_marginLeft="4dp"
                    android:layout_centerVertical="true"
            />
        </RelativeLayout>

        <ImageView
                android:layout_width="321dp"
                android:layout_height="1dp"
                android:layout_below="@id/email_rl"
                android:layout_marginTop="8dp"
                android:background="@color/line_bg"
                android:id="@+id/email_line"
        />

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/card_rl"
                android:layout_below="@id/email_line"
                android:layout_marginTop="9dp"
        >
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@mipmap/card_bg"
                    android:id="@+id/card_iv"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/card_txt_tv"
                    android:text="@string/card"
                    android:textColor="@color/black"
                    android:layout_toRightOf="@id/card_iv"
                    android:layout_marginLeft="12dp"
                    android:layout_centerVertical="true"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/card_tv"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="10020016"
                    android:layout_centerVertical="true"
                    android:textSize="10sp"
                    android:textStyle="bold"
            />
        </RelativeLayout>

        <ImageView
                android:layout_width="321dp"
                android:layout_height="1dp"
                android:layout_below="@id/card_rl"
                android:layout_marginTop="8dp"
                android:background="@color/line_bg"
                android:id="@+id/card_line"
        />

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/pos_rl"
                android:layout_below="@id/card_line"
                android:layout_marginTop="9dp"
        >
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@mipmap/pos_bg"
                    android:id="@+id/pos_iv"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pos_txt_tv"
                    android:text="@string/pos"
                    android:textColor="@color/black"
                    android:layout_toRightOf="@id/pos_iv"
                    android:layout_marginLeft="12dp"
                    android:layout_centerVertical="true"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pos_tv"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/school"
                    android:layout_centerVertical="true"
                    android:textSize="10sp"
                    android:textStyle="bold"
            />
        </RelativeLayout>

        <ImageView
                android:layout_width="321dp"
                android:layout_height="1dp"
                android:layout_below="@id/pos_rl"
                android:layout_marginTop="8dp"
                android:background="@color/line_bg"
                android:id="@+id/pos_line"
        />

    </RelativeLayout>

</RelativeLayout>